--- a/templates/patient_review.html
+++ b/templates/patient_review.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
-{% block body_class %}patient-survey-page{% endblock %}
+{% block title %}Your Review{% endblock %}
+
+{% block body_class %}patient-review-page{% endblock %}
 
 {% block content %}
 <div class="patient-section">
-    <h1>📝 Patient Details</h1>
+    <h1>Your Generated Review</h1>
     <form id="patient-form">
         <div class="form-group">
             <label for="patient-name">Patient Name:</label>
