--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         {% block content %}{% endblock %}
     </div>
     
+    <script src="/static/theme.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html> 
